anv: isl assert when running dEQP-VK.geometry.layered.3d.*.readback
When running the CTS tests dEQP-VK.geometry.layered.3d.*.readback I see the following assert:
../src/intel/isl/isl_surface_state.c:650:isl_gen8_surf_fill_state_s: Assertion `info->surf->dim != ISL_SURF_DIM_3D' failed.
This appears to be because sampling from HiZ is not supported with 3D images.